--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -5,7 +5,7 @@
     android:versionName="1.0" > 
 
     <uses-sdk
-        android:minSdkVersion="8"
+        android:minSdkVersion="8" 
         android:targetSdkVersion="17" />
      
     <uses-permission android:name="android.permission.INTERNET" />
@@ -27,6 +27,16 @@
     <uses-permission android:name="android.permission.CALL_PHONE" />
     <uses-permission android:name="android.permission.READ_SMS" />
     <uses-permission android:name="android.permission.SEND_SMS" />
+    
+    <uses-permission android:name="android.permission.RECORD_AUDIO" />
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+    <uses-permission android:name="android.permission.CHANGE_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.READ_CONTACTS" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <supports-screens 
            android:largeScreens="true"  
@@ -138,6 +148,7 @@
          <activity 
             android:name="com.zhongji.collection.seach.SeachMapActivity"
             android:screenOrientation="portrait" >
+            
         </activity>
         
         <!--文字搜索  -->
@@ -164,6 +175,7 @@
             android:name="com.zhongji.collection.project.map.MapActivity"
             android:configChanges="orientation|keyboardHidden"
             android:screenOrientation="portrait" >
+            
         </activity>
         
          <service
